# husky-assembly-teleop

./: .dockerignore  .gitattributes  .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  DOCKER.md  Dockerfile  Dockerfile.dev  README.md  TODO.md  calibration_checklist.md  calibration_results.json  docker-compose.yml  log  log.md  package.xml  requirements.txt  rhino_installation.md  setup.cfg  setup.py  todo.md
.devcontainer/: devcontainer.json
data/: recorded_data_20250413_194015.npz
doc/: calibration_manual.md  husky_ros2.md  journal_refactor_plan.md  mocap_experiment_manual.md
docker/: build.bat  build.sh  run.bat  run.sh  run_dev.bat
husky_assembly_teleop/: __init__.py  bar_action_io.py  cfab_collision_adapter.py  cfab_session.py  common.py  husky_control.py  husky_monitor.py  husky_planning.py  husky_robot.py  husky_world.py  mocap_experiment.py  scaffolding.py  scaffolding_tool_client.py  test_setio.py  ui_backend.py  utils.py
pybullet_mocap/: common.py  controller.py  husky_control.py  husky_monitor.py  husky_planning.py  husky_robot.py  husky_world.py  planner.py  scaffolding.py  test_setio.py  utils.py
rules/: CLAUDE.md  local-data-analysis.mdc
scripts/: export_tool_mesh_from_cell.py  headless_constrained_monitor.py  headless_live_monitor_test.py  inspect_bar_action_collision_geometry.py  plot_mocap_take_positions.py  smoke_constrained_api.py
tasks/: 2026-05-12_bar_action_collision_geometry_bridge_plan.md  2026-05-12_constrained_button_manual_stage.md  2026-05-13_dual_arm_traj_export_parse.md  2026-05-13_headless_test_trajectory_flag.md  cc_lessons.md  (+19 more)
(+500 files in other folders)
