<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>pybullet_mocap</name>
  <version>0.0.0</version>
  <description>Monitor node for husky robots.</description>
  <maintainer email="jakob.genhart@inf.ethz.ch">Jakob Genhart</maintainer>
  <license>Apache-2.0</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <depend>tf2_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>ur_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
